# scip-sys

./: .gitattributes  Cargo.toml  README.md  build.rs  bundled.rs  callback.rs  download.rs  from_source.rs
.github/: build_and_test.yml
.github/workflows/: build_and_test.yml  generate-bindings.yml
artifacts/bindings-linux/: linux.rs
artifacts/bindings-macos-arm/: macos-arm.rs
artifacts/bindings-windows/: windows.rs
examples/: create.rs
lib/debian/: libgcg.so.3.5  libsoplexshared.so.6.0
lib/linux/: libgcg.so.3.5
lib/macos/: libgcg.3.5.3.0.dylib  libgcg.3.5.dylib  libpapilo.dylib  libsoplexshared.6.0.dylib  libsoplexshared.dylib
scip-wasm/: Cargo.toml  build.sh
scip-wasm/demo/: index.html  worker.js
scip-wasm/src/: lib.rs
src/: bindings_pregenerated.rs  lib.rs
src/bindings/: linux-arm.rs  macos-arm.rs  macos-intel.rs  windows.rs
