[package]
name = "scip-sys"
version = "0.1.22"
edition = "2021"
description = "Bindings for the C SCIP solver."
repository = "https://github.com/scipopt/scip-sys"
license = "Apache-2.0"
links = "scip"

[features]
bundled = ["ureq", "zip", "tempfile", "zip-extract"]
from-source = ["ureq", "zip", "tempfile", "zip-extract", "cmake", "flate2", "tar"]
static = ["libz-sys/static"]

[build-dependencies]
bindgen = "0.72.0"
glob = "0.3.1"
ureq = { version = "2.9.6", optional = true }
zip = { version = "0.5", optional = true }
tempfile = { version = "3.2", optional = true }
zip-extract = { version = "0.1.3", optional = true }
cmake = { version = "0.1.50", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }

[dependencies]
libz-sys = {  version="1.1.16", features = ["static"], optional = true }
