[package]
name = "scip-sys"
version = "0.1.26"
edition = "2021"
description = "Bindings for the C SCIP solver."
repository = "https://github.com/scipopt/scip-sys"
license = "Apache-2.0"
links = "scip"

[features]
bundled = ["ureq", "zip", "tempfile", "zip-extract"]
from-source = ["ureq", "zip", "tempfile", "zip-extract", "cmake"]

[build-dependencies]
bindgen = "0.72.0"
glob = "0.3.1"
ureq = { version = "2.9.6", optional = true }
zip = { version = "0.5", optional = true }
tempfile = { version = "3.2", optional = true }
zip-extract = { version = "0.1.3", optional = true }
cmake = { version = "0.1.50", optional = true }

[dependencies]
cmake = "0.1.50"
