[package]
name = "scip-sys"
version = "0.1.28"
edition = "2021"
description = "Bindings for the C SCIP solver."
repository = "https://github.com/scipopt/scip-sys"
license = "Apache-2.0"
links = "scip"

# `bindgen` (and the libclang it needs) is only required when the SCIP ABI is
# not known ahead of time: the system/SCIPOPTDIR/conda paths and `from-source`.
# It is enabled by default so those paths keep working out of the box. The
# `bundled` path uses a pinned SCIP release with prebuilt bindings, so a
# `--no-default-features --features bundled` build drops bindgen + libclang
# entirely and builds noticeably faster.
[features]
default = ["bindgen"]
bundled = ["ureq", "zip", "tempfile", "zip-extract"]
from-source = ["ureq", "zip", "tempfile", "zip-extract", "cmake", "flate2", "tar", "bindgen"]

[build-dependencies]
bindgen = { version = "0.72.0", optional = true }
glob = "0.3.1"
ureq = { version = "2.9.6", optional = true }
zip = { version = "0.5", optional = true }
tempfile = { version = "3.2", optional = true }
zip-extract = { version = "0.1.3", optional = true }
cmake = { version = "0.1.50", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[dependencies]
cmake = "0.1.50"
